welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (isMom==true && isMorning==true && isAsleep=false) 
                                           ^